--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,8 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
-}
+  /* --foreground: #171717; */
+} 
 
 body {
   color: var(--foreground);
